# awedio

app/: package-lock.json  package.json
app/lib/: index.js
app/native/: Cargo.toml
app/native/src/: http_client.rs  lib.rs  main.rs  scrapper.rs
app/native/src/scrapper/: youtube.rs
ui/: index.html  index.js  main.js  package-lock.json  package.json  renderer.js  style.css
