[package]
name = "app"
version = "0.1.0"
authors = ["inatos <32039018+inatos@users.noreply.github.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
#exclude = ["artifacts.json", "index.node"]

[lib]
name = "app"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.0"

[dependencies]
neon = "0.7.0"
percent-encoding = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.118"
serde_urlencoded = "0.7.0"
url = "2.2.0"

hyper= { version="0.14.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }

regex="1.4.3"
log = "0.4.13"


